--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contacts App</title>
     </head>
-    <body>
+    <body onload="fetchContacts()">
         
-        <div id="table">Contacts loading</div>
+        <div id="table">Contacts loading...</div>
         <button id="refresh" type="button">Refresh</button>
         <button id="addContact" type="button">Add Contact</button>
 
         <script src="config.js"></script>
         <script>
+
+            function fetchContacts() {
+                fetch(rootpath + "controller/get-contacts/")
+                    .then(function (response) {
+                        return response.json();
+                    })
+                    .then(function (data) {
+                        // displayOutput(data);
+                        console.log(data);
+                    })
+            }
 
         </script>
     </body>
