Lesson 5: Bug has been fixed proper and is successful

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script>
 
             function fetchContacts() {
-                fetch(rootpath + "controller/get-contacts/")
+                fetch(rootPath + "controller/get-contacts/")
                     .then(function (response) {
                         return response.json();
                     })
