Lesson 12: Adding Homelinks and fixing bugs

--- a/add-contact.html
+++ b/add-contact.html
@@ -35,14 +35,16 @@
 
         <script src="config.js"></script>
         <script>
+            document.getElementById("submitForm").addEventListener('click', submitForm);
+            document.getElementById("homeLink").addEventListener('click', homeLink);
 
             function submitForm(e) {
                 e.preventDefault();
 
-                const formData = new FormData(document.querySelector('#editForm'));
+                const form = new FormData(document.querySelector('#editForm'));
                 form.append('apiKey', apiKey);
 
-                fetch(rootPath + 'controller/insert-contact' , {
+                fetch(rootPath + 'controller/insert-contact/', {
                     method: 'POST',
                     headers: {'Accept': 'application/json, *.*'},
                     body: form
@@ -53,13 +55,16 @@
                 .then(function (data){
                     if (data == "1") {
                         alert("Contact added successfully!");
-                        // Link to home page
-                        window.open("index.html", "_self");
+                        homeLink();
                     } else {
-                        alert(data + "Error adding contact!");
-                        // Link to home page
+                        alert(data);
+                        homeLink();
                     }
                 })
+            }
+
+            function homeLink() {
+                window.open("index.html", "_self");
             }
 
         </script>
