Lesson 17: Getting ID function added in the edit-contact file

--- a/edit-contact.html
+++ b/edit-contact.html
@@ -38,7 +38,15 @@
 
         <script src="config.js"></script>
         <script>
-        
+            var id = getId();
+            console.log(id);
+            function getId() {
+                var url = window.location.href;
+                var pos = url.search("=");
+                var id = url.slice(pos + 1);
+                return id;
+            }
+
         </script>
     </body>
 </html>
