--- a/edit-contact.html
+++ b/edit-contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Add Contact</title>
     </head>
-    <body>
+    <body onload="getContact()">
         <div id="avatarImage"></div>
         <br/>
         <form id="editForm">
@@ -39,7 +39,9 @@
         <script src="config.js"></script>
         <script>
             var id = getId();
+            document.getElementById("homeLink").addEventListener('click', homeLink);
             console.log(id);
+
             function getId() {
                 var url = window.location.href;
                 var pos = url.search("=");
@@ -47,6 +49,20 @@
                 return id;
             }
 
+            function getContact() {
+                fetch(rootPath + 'controller/get-contacts/?id=' + id)
+                    .then(function (response) {
+                        return response.json();
+                    })
+                    .then(function (data) {
+                        // display contact details
+                        console.log(data);
+                    })
+            }
+
+            function homeLink() {
+                window.open("index.html", "_self");
+            }
         </script>
     </body>
 </html>
