--- a/edit-contact.html
+++ b/edit-contact.html
@@ -40,6 +40,7 @@
         <script>
             var id = getId();
             document.getElementById("homeLink").addEventListener('click', homeLink);
+            document.getElementById("editContact").addEventListener('click', editContact);
             console.log(id);
 
             function getId() {
@@ -73,6 +74,17 @@
                 document.getElementById("lastname").value = data[0].lastname;
                 document.getElementById("email").value = data[0].email;
                 document.getElementById("mobile").value = data[0].mobile;
+            }
+
+            function editContact() {
+                document.getElementById("firstname").readOnly = false;
+                document.getElementById("lastname").readOnly = false;
+                document.getElementById("email").readOnly = false;
+                document.getElementById("mobile").readOnly = false;
+                document.getElementById("avatarLabel").hidden = false;
+                document.getElementById("avatar").hidden = false;
+                document.getElementById("submitForm").hidden = false;
+                document.getElementById("editContact").hidden = true;
             }
         </script>
     </body>
