--- a/edit-contact.html
+++ b/edit-contact.html
@@ -41,7 +41,7 @@
             var id = getId();
             document.getElementById("homeLink").addEventListener('click', homeLink);
             document.getElementById("editContact").addEventListener('click', editContact);
-            console.log(id);
+            document.getElementById("submitForm").addEventListener('click', submitForm);
 
             function getId() {
                 var url = window.location.href;
@@ -57,7 +57,6 @@
                     })
                     .then(function (data) {
                         displayOutput(data);
-                        console.log(data);
                     })
             }
 
@@ -93,6 +92,24 @@
                 const form = new FormData(document.querySelector("#editForm"));
                 form.append('apiKey', apiKey);
                 form.append('id', id);
+
+                fetch(rootPath + 'controller/edit-contact/', {
+                    method: 'POST',
+                    headers: {'Accept': 'application/json, *.*'},
+                    body: form
+                })
+                .then(function (response) {
+                    return response.text();
+                })
+                .then(function (data){
+                    if (data == "1") {
+                        alert("Contact Updated successfully!");
+                        homeLink();
+                    } else {
+                        alert(data);
+                        homeLink();
+                    }
+                })
             }
         </script>
     </body>
