--- a/edit-contact.html
+++ b/edit-contact.html
@@ -42,6 +42,7 @@
             document.getElementById("homeLink").addEventListener('click', homeLink);
             document.getElementById("editContact").addEventListener('click', editContact);
             document.getElementById("submitForm").addEventListener('click', submitForm);
+            document.getElementById("deleteContact").addEventListener('click', deleteContact);
 
             function getId() {
                 var url = window.location.href;
@@ -84,6 +85,7 @@
                 document.getElementById("avatar").hidden = false;
                 document.getElementById("submitForm").hidden = false;
                 document.getElementById("editContact").hidden = true;
+                document.getElementById("deleteContact").hidden = true;
             }
 
             function submitForm(e) {
@@ -110,6 +112,24 @@
                         homeLink();
                     }
                 })
+            }
+
+            function deleteContact() {
+                var confimation = confirm("Are you sure you want to delete this contact?");
+                if (confimation == true) {
+                    fetch(rootPath + 'controller/delete-contact/?id=' + id)
+                    .then(function (response) {
+                        return response.text();
+                    })
+                    .then(function (data) {
+                        if (data == "1") {
+                            alert("Contact deleted successfully!");
+                            homeLink();
+                        } else {
+                            alert(data);
+                        }
+                    });
+                }
             }
         </script>
     </body>
